Configured as Java 9+ module